--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,9 @@
   to = "/index.html"
   status = 200
   force = true
+  
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/*"
+  status = 200
+  force = true
